修改一个单词缩写的需要替换

--- a/library_abbreviated.bib
+++ b/library_abbreviated.bib
@@ -1,21 +1,21 @@
 @inproceedings{devlin2018bert,
   title={Bert: Pre-training of deep bidirectional transformers for language understanding},
   author={Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
-  booktitle={NAACL-HLT},
+  booktitle={Proc. Conf. N. Am. Chapter Assoc. Comput. Linguist.: Hum. Lang. Technol.},
   year={2019},
 }
 
 @inproceedings{dai2019transformer,
   title={Transformer-xl: Attentive language models beyond a fixed-length context},
   author={Dai, Zihang and Yang, Zhilin and Yang, Yiming and Carbonell, Jaime and Le, Quoc V and Salakhutdinov, Ruslan},
-  booktitle = {ACL},
+  booktitle = {Proc. Annu. Meet. Assoc. Comput. Linguist.},
   year      = {2019},
 }
 
 @inproceedings{brown2020language,
   title={Language models are few-shot learners},
   author={Brown, Tom B and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and others},
-  booktitle={NeurIPS},
+  booktitle={Proc. Adv. neural inf. proces. syst.},
   year={2020},
 }
 
@@ -30,7 +30,7 @@
 @inproceedings{yang2019xlnet,
   title={Xlnet: Generalized autoregressive pretraining for language understanding},
   author={Yang, Zhilin and Dai, Zihang and Yang, Yiming and Carbonell, Jaime and Salakhutdinov, Ruslan and Le, Quoc V},
-  booktitle={NeurIPS},
+  booktitle={Proc. Adv. neural inf. proces. syst.},
   year={2019},
 }
 
@@ -54,7 +54,7 @@ url={https://openreview.net/forum?id=YicbFdNTTy}
 @inproceedings{carion2020end,
   title={End-to-end object detection with transformers},
   author={Carion, Nicolas and Massa, Francisco and Synnaeve, Gabriel and Usunier, Nicolas and Kirillov, Alexander and Zagoruyko, Sergey},
-  booktitle={European Conference on Computer Vision},
+  booktitle={Proc. Eur. Conf. Comput. Vis.},
   pages={213--229},
   year={2020},
   organization={Springer}
